# abstract-getters

./: Cargo.toml  README.md
.github/workflows/: rust.yml
abstract-getters/: Cargo.toml
abstract-getters-derive/: Cargo.toml
abstract-getters-derive/src/: lib.rs
abstract-getters-derive/tests/: macro.rs
abstract-getters/src/: lib.rs
