[package]
name = "abstract-getters-derive"
version = "0.1.0"
edition = "2024"
authors = ["maxwase", "Max T <max.vvase@gmail.com>"]
license = "MIT"
description = "Derive macros for the abstract-getters crate"
repository = "https://github.com/maxwase/abstract-getters"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
convert_case = "0.8.0"

[dev-dependencies]
abstract-getters = { path = "../abstract-getters" }